tests/checker/bad/bad_cast_3.scilla
scilla_version 0

library CastLib

contract CastContract ()

transition CastTest()
  (* Casts to non-address not allowed *)
  x = 0x1234567890123456789012345678901234567890;
  v <-& x as ByStr20
end
